--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "rm -rf build && npm run build && cd build && mv index.html 200.html && surge . --domain importio-invoice.surge.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
