--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,5 +36,11 @@ jobs:
       # run tests!
       - run: npm run test
 
+      - deployment:
+          production:
+            branch: master
+            commands:
+              - surge --project ./build --domain importio-invoice.surge.sh
+
 
 
