--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       # run tests!
       - run: npm run test
 
-      - deployment:
+      - deploy:
           production:
             branch: master
             commands:
