again, figuring this out

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,9 +37,10 @@ jobs:
       - run: npm run test
 
   deploy:
-    run:
-      name: Deploy to Surge
-      command: surge --project ./build --domain importio-invoice.surge.sh
+    steps:
+      - run:
+        name: Deploy to Surge
+        command: surge --project ./build --domain importio-invoice.surge.sh
 
 workflows:
   version: 2
