--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,8 @@ jobs:
       - run: npm run test
 
   deploy:
+    docker:
+      - image: circleci/node:7.10
     steps:
       - run:
         name: Deploy to Surge
