--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,10 +36,23 @@ jobs:
       # run tests!
       - run: npm run test
 
+  deploy:
+    docker:
+      - image: circleci/node:7.10
+    steps:
+      - checkout
+      - run:
+          name: Deploy to Surge
+          command: surge --project ./build --domain importio-invoice.surge.sh
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
       - deploy:
-          docker:
-            - image: circleci/node:7.10
-          steps:
-          - run:
-              name: Deploy to Surge
-              command: surge --project ./build --domain importio-invoice.surge.sh
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
