--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
       - image: circleci/node:7.10
     steps:
       - checkout
+      - run: npm i surge
       - run:
           name: Deploy to Surge
           command: surge --project ./build --domain importio-invoice.surge.sh
