--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,15 +36,31 @@ jobs:
       # run tests!
       - run: npm run test
 
+  # DEPLOY FOR AWS
   deploy:
     docker:
-      - image: circleci/node:7.10
-    steps:
-      - checkout
-      - run: npm install
-      - run:
-          name: Deploy to Surge
-          command: npm run deploy
+      - image: cicleci/node:7.10
+      steps:
+        - checkout
+        - run: npm install
+        - run: sudo apt-get update && sudo apt-get install -y python-dev
+        - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
+        - run: sudo python get-pip.py
+        - run: sudo pip install awscli --upgrade
+        - run: aws --version
+        - run: aws s3 ls
+        - run: npm run aws
+
+  # DEPLOY FOR SURGE
+  # deploy:
+  #   docker:
+  #     - image: circleci/node:7.10
+  #   steps:
+  #     - checkout
+  #     - run: npm install
+  #     - run:
+  #         name: Deploy to Surge
+  #         command: npm run deploy
 
 workflows:
   version: 2
