--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
   # DEPLOY FOR AWS
   deploy:
     docker:
-      - image: cicleci/node:7.10
+      - image: circleci/node:7.10
     steps:
       - checkout
       - run: npm install
