--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,16 +33,8 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      # run tests!
+      # run tests! and deploy
       - run: npm run test
-
-  # DEPLOY FOR AWS
-  deploy:
-    docker:
-      - image: circleci/node:7.10
-    steps:
-      - checkout
-      - run: npm install
       - run: sudo apt-get update && sudo apt-get install -y python-dev
       - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
       - run: sudo python get-pip.py
@@ -50,6 +42,21 @@ jobs:
       - run: aws --version
       - run: aws s3 ls
       - run: npm run aws
+
+  # DEPLOY FOR AWS
+  # deploy:
+  #   docker:
+  #     - image: circleci/node:7.10
+  #   steps:
+  #     - checkout
+  #     - run: npm install
+  #     - run: sudo apt-get update && sudo apt-get install -y python-dev
+  #     - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
+  #     - run: sudo python get-pip.py
+  #     - run: sudo pip install awscli --upgrade
+  #     - run: aws --version
+  #     - run: aws s3 ls
+  #     - run: npm run aws
 
   # DEPLOY FOR SURGE
   # deploy:
@@ -62,14 +69,14 @@ jobs:
   #         name: Deploy to Surge
   #         command: npm run deploy
 
-workflows:
-  version: 2
-  build-deploy:
-    jobs:
-      - build
-      - deploy:
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
+# workflows:
+#   version: 2
+#   build-deploy:
+#     jobs:
+#       - build
+#       - deploy:
+#           requires:
+#             - build
+#           filters:
+#             branches:
+#               only: master
