--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "aws": "npm run build && aws s3 sync build/ s3://tylerkeesling.xyz",
+    "aws": "npm run build && aws s3 sync build/ s3://tylerkeesling.xyz --delete",
     "deploy": "rm -rf build && npm run build && cd build && surge . --domain importio-invoice.surge.sh"
   },
   "eslintConfig": {
